--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodeMirror Test</title>
+  <title> Test</title>
   <link rel="stylesheet" href="https://unpkg.com/codemirror@5.65.13/lib/codemirror.css">
   <style>
     #editor { height: 200px; }
   </style>
 </head>
 <body>
-  <h1>Test Code with CodeMirror</h1>
+  <h1>Test </h1>
   <div id="editor">
   <script type="text/javascript">
   (function(d, t) {
